--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         
 <!--        Stylesheet for this screensaver -->
         <style>
+            * {
+margin: 0;
+padding: 0;
+}
             h1 {
             display: block;font-size: 2em;-webkit-margin-before: 0.01em;-webkit-margin-after: 0.01em;
                 -webkit-margin-start: 0px;-webkit-margin-end: 0px;font-weight: bold;}
