--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ padding: 0;
         
     </head>
     <body>
-        <h1>Search  this PC for:</h1>
+        <h1 style="padding-top=50px">Search  this PC for:</h1>
         <ul>
             <li class="center"><h3>Part-time jobs</h3></li>
             <li class="center"><h3>Graduate Jobs</h3></li>
